# tutor_ai

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  dummy_test_dir.txt  package.json  pyproject.toml  run_servers.sh  vitest.config.ts
.claude/: settings.local.json
.container-use/: AGENT.md  environment.json
.devcontainer/: Dockerfile  devcontainer.json
agents/: llm_service.py  pre_assessment_agent.py
api/: main.py  static_server.py
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: pre_assessment_agent.py  tutor_agent.py
backend/app/api/v1/endpoints/: chat.py
backend/app/core/: config.py  static_server.py
backend/app/db/: crud.py  database.py  models.py
backend/app/services/: chat_service.py
backend/app/temporal/: activities.py  client.py  workflows.py
backend/tests/: test_health.py
backend/tests/unit/agents/: test_llm_service.py  test_pre_assessment_agent.py
docs/: ag-ui-frontend.txt  architecture.md  fastapi-doc.txt  frontend-refactoring-plan.md  implementation_plan.md  twentyfirstdev.js
frontend/: .gitignore  CLAUDE.md  HOME_TAB_UX_ISSUES.md  README.md  TASK-006-IMPLEMENTATION-SUMMARY.md  jest.config.js  package-lock.json  package.json  playwright-ct.config.ts  playwright.config.ts  tailwind.config.ts  test-results.json  tsconfig.json  vitest.config.ts
memory-bank/: architecture.md  implementation_plan.md  prd.md
scripts/: init-poetry.sh
static/: index.html
templates/: index.html
tests/: home.spec.ts
(+323 files in other folders)
