[tool.poetry]
name = "its-backend"
version = "0.1.0"
description = "Intelligent Tutoring System - Backend"
authors = ["Your Name <you@example.com>"] # Placeholder, will be updated by user
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.1" # For TestClient
